--- a/src/app/_pages/products-page/products-page.component.html
+++ b/src/app/_pages/products-page/products-page.component.html
@@ -1,1 +1,5 @@
-<p>products-page works!</p>
+<h2>Liste de films</h2>
+<app-product-list [films]="films"></app-product-list>
+<h2>Liste albums</h2>
+<app-product-list [albums]="albums"></app-product-list>
+
