--- a/src/app/_commons/footer/footer.component.css
+++ b/src/app/_commons/footer/footer.component.css
@@ -1,21 +1,15 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  }
+}
 
-footer{
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height:10vh;
-  background-color:slategray;
-  color:white;
-  position:absolute;
-  bottom: 0;
-  left:0;
-
+  width: 100vw;
+  height: 10vh;
+  background-color: slategray;
+  color: white;
 }
-
-
