--- a/src/app/_commons/navbar/navbar.component.css
+++ b/src/app/_commons/navbar/navbar.component.css
@@ -1,33 +1,31 @@
-*{
-margin:0;
-padding:0;
-box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-nav{
+nav {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  height:10vh;
-  background-color:slategray;
-  color:white;
-  position:absolute;
-  top:0;
-  left:0;
-}
-h1{
-  margin-left: 2vw;
-  margin-right:2vw;
-}
-ul{
-  list-style-type:none;
-  display:flex;
+  width: 100vw;
+  height: 10vh;
+  background-color: slategray;
+  color: white;
 }
 
-li{
-  margin-right:1vw;
+h1 {
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
-a{
-  color:white
+ul {
+  list-style-type: none;
+  display: flex;
+}
+
+li {
+  margin-right: 1vw;
+}
+a {
+  color: white;
 }
